--- a/manual/zh/responsive.html
+++ b/manual/zh/responsive.html
@@ -8,7 +8,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@threejs">
   <meta name="twitter:title" content="Three.js – 响应式设计">
-  <meta property="og:image" content="https://threejs-docs.netlify.app/files/share.png">
+  <meta property="og:image" content="/files/share.png">
   <link rel="shortcut icon" href="../../files/favicon_white.ico" media="(prefers-color-scheme: dark)">
   <link rel="shortcut icon" href="../../files/favicon.ico" media="(prefers-color-scheme: light)">
 
